<resources>
    <string name="app_name">Exercise Sqlite</string>
    <string name="lbl">Daftar Kontak</string>
    <string name="nm">Nama</string>
    <string name="nt">Nomor Telepon</string>
    <string name="mail">Email</string>
    <string name="alamat">Alamat</string>
    <string name="simp">Simpan</string>
    <string name="add">Tambah Kontak</string>

    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukan_no_telp">Masukkan Nomor Telepon</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>

</resources>
